# agentic-graph-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.integrations.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: api.yaml  default.yaml  local-gemma.yaml  local.yaml  production.yaml
data/: sample.md
data/eval/: qa.yaml
docker/: Caddyfile  Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  INTEGRATIONS.md  OPTIMIZATION-NOTES.md  PROVIDERS.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: AppShell.tsx  Chat.tsx  Controls.tsx  DocumentsPanel.tsx  Message.tsx  Sources.tsx  StatusBar.tsx  Upload.tsx  UserBar.tsx
frontend/src/components/admin/: GraphView.tsx  LimitsForm.tsx
frontend/src/components/chat/: Composer.tsx  Markdown.tsx  Message.tsx  QuotaBanner.tsx  Sources.tsx  ThreadSidebar.tsx
frontend/src/lib/: auth.tsx  theme.tsx
frontend/src/routes/: Account.tsx  AuthLayout.tsx  Chat.tsx  Login.tsx  Signup.tsx  Verify.tsx
integrations/: README.md
integrations/guardrails/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
integrations/guardrails/examples/: client.js  client.py  curl.sh  rag_app.py
integrations/guardrails/guardrails/: __init__.py  config.py  main.py  pipeline.py  policy.py  schemas.py
integrations/guardrails/guardrails/checks/: __init__.py  injection_rules.py  normalize.py  pii.py
integrations/guardrails/guardrails/judge/: __init__.py  errors.py  judge.py  prompts.py  providers.py
integrations/guardrails/policies/: default.yaml  docs_bot.yaml
integrations/llmlens/: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini
integrations/llmlens/configs/: default.yaml  local.yaml
integrations/llmlens/dashboard/: index.html  nginx.conf  package.json
integrations/llmlens/docker/: Caddyfile  Dockerfile.api
integrations/llmlens/docs/: ARCHITECTURE.md  DATA-MODEL.md  SDK.md
integrations/llmlens/examples/: generate_traffic.py  instrument_project1.md
integrations/llmlens/sdk/: pyproject.toml
integrations/llmlens/sdk/src/llmlens/: __init__.py  config.py  exporter.py  ids.py  tracer.py
integrations/llmlens/sdk/src/llmlens/integrations/: __init__.py  anthropic.py  langchain.py  openai.py
integrations/llmlens/server/: pyproject.toml
integrations/llmlens/server/src/llmlens_server/: __init__.py  __main__.py  redis_client.py
integrations/llmlens/server/src/llmlens_server/alerting/: __init__.py  evaluators.py  notifiers.py  rules.py
integrations/llmlens/server/src/llmlens_server/api/: __init__.py  app.py  deps.py  schemas.py
integrations/llmlens/server/src/llmlens_server/api/routers/: __init__.py  alerts.py  health.py  ingest.py  metrics.py  otlp.py  projects.py  traces.py
integrations/llmlens/server/src/llmlens_server/config/: __init__.py  loader.py  settings.py
integrations/llmlens/server/src/llmlens_server/core/: __init__.py  errors.py  keys.py  logging.py  semconv.py  types.py
integrations/llmlens/server/src/llmlens_server/ingest/: __init__.py  canonical.py  native.py  otlp.py  producer.py
integrations/llmlens/server/src/llmlens_server/pricing/: __init__.py  calculator.py  seed.py
integrations/llmlens/server/src/llmlens_server/query/: __init__.py  metrics.py  traces.py
integrations/llmlens/server/src/llmlens_server/storage/: __init__.py
integrations/llmlens/server/src/llmlens_server/storage/clickhouse/: __init__.py  client.py  matviews.sql  queries.py  schema.sql  writer.py
integrations/llmlens/server/src/llmlens_server/storage/postgres/: __init__.py  client.py  repos.py  schema.sql
integrations/llmlens/server/src/llmlens_server/worker/: __init__.py  __main__.py  alerts.py  consumer.py  run.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: demo.py  eval.py
src/graphrag/: __init__.py  __main__.py  auth.py  container.py  jobs.py  worker.py
src/graphrag/accounts/: __init__.py  emails.py  keys.py  passwords.py  purge.py  service.py
src/graphrag/agent/: __init__.py  graph.py  prompts.py  styles.py  tools.py
src/graphrag/api/: __init__.py  app.py  deps.py  schemas.py  streaming.py
src/graphrag/cache/: __init__.py
src/graphrag/config/: __init__.py  loader.py  settings.py
src/graphrag/core/: __init__.py  errors.py  logging.py  messages.py  sanitize.py  types.py
src/graphrag/db/: __init__.py  engine.py  models.py
src/graphrag/embeddings/: __init__.py  api_providers.py  base.py  cache.py  cohere_native.py  ollama.py  sentence_transformers.py
src/graphrag/ingestion/: __init__.py  enrich.py
src/graphrag/limits/: __init__.py  deps.py  service.py
src/graphrag/llm/: __init__.py  factory.py  registry.py
src/graphrag/observability/: __init__.py
src/graphrag/ocr/: __init__.py  base.py  tesseract.py  vision_llm.py
src/graphrag/pipelines/: __init__.py  ingest.py  query.py
src/graphrag/retrieval/: __init__.py  base.py  fusion.py  graph_augmented.py  hybrid.py  reranker.py  vector.py
src/graphrag/safety/: __init__.py  guardrails.py
src/graphrag/storage/: __init__.py  neo4j_client.py
src/graphrag/usage/: __init__.py  recorder.py
tests/: conftest.py
tests/integration/: conftest.py  test_accounts.py  test_admin_api.py  test_api_health.py  test_auth_api.py  test_limits_api.py
tests/unit/: test_auth.py  test_chunking.py  test_cohere_embedder.py  test_config.py  test_db_engine.py  test_duckdb_pipeline.py  test_duckdb_store.py  test_enrich.py  test_fusion.py  test_graph_extractor.py  test_limits_service.py  test_llm_factory.py  test_loaders.py  test_local_vector_store.py  test_messages.py  test_model_registry.py  test_observability.py  test_pdf_loader.py  test_prompt_hardening.py  test_rel_types.py  test_reranker.py  test_safety_guardrails.py  test_sanitize.py  test_styles.py
(+59 files in other folders)
