[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-graph-rag"
version = "0.1.0"
description = "An agentic Graph-RAG service: hybrid knowledge-graph + vector retrieval, driven by a tool-using LLM agent. Runs local or via APIs; bare with uvicorn or one command with Docker."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agentic-graph-rag" }]
keywords = ["rag", "graph-rag", "knowledge-graph", "agent", "neo4j", "langgraph", "fastapi"]

dependencies = [
  # --- config & core ---
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "typer>=0.12",
  # --- api ---
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  "slowapi>=0.1.9",          # request rate limiting
  "prometheus-client>=0.20", # /metrics
  # --- background jobs ---
  "arq>=0.26",               # Redis-backed ingest queue (opt-in worker process)
  # Durable agent memory. Postgres is the production backend (it lets the
  # deployment run plain redis); the Redis saver stays for local dev.
  "langgraph-checkpoint-postgres>=3.1",
  "langgraph-checkpoint-redis>=0.5",
  # --- agent / llm framework ---
  "langgraph>=1.2",
  "langchain-core>=0.3",
  "langchain-text-splitters>=0.3",
  # --- providers (installed together for simplicity; swap freely via config) ---
  "langchain-anthropic>=0.2",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-ollama>=0.2",
  # --- tokenizer ---
  # Chunk sizes are measured in the embedding model's own tokens. This is the
  # tokenizer only — `transformers` does not depend on torch, and installing it
  # here does not pull one in. See the `local-models` extra for the in-process
  # embedder/reranker, which does.
  "transformers>=4.44",
  # --- storage & cache ---
  "neo4j>=5.23",
  "redis>=5.0",
  "duckdb>=1.1",             # per-user vector store
  # Accounts, limits, usage, chat history. psycopg is the checkpointer's driver;
  # asyncpg is the app's. Both are needed, and they are not interchangeable.
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
  "argon2-cffi>=23.1",       # password hashing
  "httpx>=0.27",             # outbound calls (transactional email)
  # --- ingestion ---
  "pdfplumber>=0.11",
  "pillow>=10.4",
  "pytesseract>=0.3.13",
  "python-docx>=1.1",
  "beautifulsoup4>=4.12",
  "numpy>=1.26",
]

[project.optional-dependencies]
# Run embedding/reranker models in-process instead of calling out to a service:
#   embeddings.provider: sentence_transformers
#   retrieval.rerank.provider: cross_encoder
# Neither shipped profile needs this — `local` runs both on Ollama and `api`
# uses Voyage. It's opt-in because sentence-transformers pulls torch, and torch
# ships ~2.7 GB of CUDA libraries a CPU-only container can never use: ~3.9 GB
# and most of the image build time, for code paths a given deploy may never hit.
# Without it, those two providers raise a ProviderError naming this extra.
local-models = [
  "sentence-transformers>=3.0",
]
# API-only embedders / rerankers.
extras = [
  "langchain-voyageai>=0.1",
  "cohere>=5.15",            # native SDK: embed-v4.0 + rerank-v4.0 controls
  "google-genai>=0.3",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "types-PyYAML",
  "types-redis",
]

[project.scripts]
graphrag = "graphrag.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.11"
packages = ["graphrag"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests needing Neo4j/Redis (skipped by default)"]
