[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmlens"
version = "0.1.0"
description = "llmlens SDK: instrument any LLM app to trace prompts, responses, latency, token cost, and tool calls."
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "observability", "tracing", "opentelemetry", "langchain", "openai", "anthropic"]

# Intentionally tiny: the SDK must be cheap to add to any app. Provider
# integrations import their libraries lazily, so none are hard dependencies.
dependencies = [
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmlens"]

[tool.ruff]
line-length = 100
target-version = "py311"
